--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "happyapp",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "http://karthickoff.github.io/superAppPoc",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -21,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +45,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^5.0.0",
     "redux-devtools": "^3.7.0"
   }
 }
