--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "happyapp",
   "version": "0.1.0",
-  "homepage": "http://karthickoff.github.io/superAppPoc",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
